# cookiecutter-templates

./: README.md  environment.yml
base-python-template/: cookiecutter.json
base-python-template/hooks/: post_gen_project.py  pre_gen_project.py
base-python-template/{{ cookiecutter.__project_dash }}/: Makefile  README.md  dotgitignore  pyproject.toml
base-python-template/{{ cookiecutter.__project_dash }}/doc/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
base-python-template/{{ cookiecutter.__project_dash }}/scripts/: pyproject_to_requirements.py  pyproject_version_manager.py  upload_to_pypi.sh
base-python-template/{{ cookiecutter.__project_dash }}/src/{{ cookiecutter.__namespace_slug }}__/{{ cookiecutter.__package_slug }}/: __init__.py
base-python-template/{{ cookiecutter.__project_dash }}/tests/: test_{{ cookiecutter.__dist_slug }}_imports.py
base-python-template/{{ cookiecutter.project_slug }}/: LICENSE  Makefile  README.md  dotgitignore  pyproject.toml
base-python-template/{{ cookiecutter.project_slug }}/doc/: example.ipynb
base-python-template/{{ cookiecutter.project_slug }}/docs/: Makefile  conf.py
base-python-template/{{ cookiecutter.project_slug }}/scripts/: pkg_version_mgr.py  pyproject_to_requirements.py
base-python-template/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.namespace_slug }}__/{{ cookiecutter.package_slug }}/: __init__.py
base-python-template/{{ cookiecutter.project_slug }}/tests/: test_imports.py
